updated dynamic id and page numbering

--- a/tvm1/help/help-index.html
+++ b/tvm1/help/help-index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
+
             <div id="help5" class="slide help-slide">
                 <div class="row slide-title">
                     <div class="col-12">
@@ -33,22 +33,18 @@
                         <div class="content">
                             <p>Put links to each of the math help pages with their description. All math links should like to this index page. or have a button back to the math index page</p>
                             <ul>
-                                <li><a href="./help1.html">Help 1</a></li>
-                                <li><a href="./help2.html">Help 2</a></li>
-                                <li><a href="./help3.html">Help 3</a></li>
-                                <li><a href="./help4.html">Help 4</a></li>
-                                <li><a href="./help5.html">Help 5</a></li>
+                                <li><a href="./help1-1.html">Help 1</a></li>
+                                <li><a href="./help1-2.html">Help 2</a></li>
+                                <li><a href="./help1-3.html">Help 3</a></li>
+                                <li><a href="./help1-4.html">Help 4</a></li>
+                                <li><a href="./help1-5.html">Help 5</a></li>
                                 <li><a href="./math-basics.html">Basic Math Refresher</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
             </div>
 
-
-
-        </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
 
 
