--- a/tvm1/tvm1-10.html
+++ b/tvm1/tvm1-10.html
@@ -14,65 +14,65 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
 
-            <div id="slide10" class="slide exercise-slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
+
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <h4>Example Exercise</h4>
-                            <p class="question">What would the $100 investment be worth in 10 years at 10% interest?</p>
-                            <p>Instructions: Identify the variables in the question and input them into the blanks provided. Use a decimal for the interest variable.</p>
-
-                            <div class="container">
-                                <div class="">
-                                    <form action="" class="indent">
-
-                                        <label>PV </label>
-                                        <input id="PV" type="number" placeholder="0"><br>
-
-                                        <label>&nbsp;&nbsp;&nbsp;i </label>
-                                        <input id="i" type="number" placeholder=".00"><br>
-
-                                        <label>&nbsp;&nbsp;n </label>
-                                        <input id="n" type="number" placeholder="0"><br>
-
-                                    </form>
-                                    <button onclick="calc_FV()" type="button" class="btn calculate-btn">Calculate</button>
-                                </div>
-                                <div class="answer" id="answer"></div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <h4>Exercise 1: Solution</h4>
+                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
+                        <p>Let's work through the problem.</p>
+                        <ul>
+                            <li>First, identify the variables:</li>
+                            <div><img class="math" src="../images/variables.svg">
                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-9.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-11.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">10</div>
+                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
+                            <div><img class="math" src="../images/plug-in-numbers.svg">
+                            </div>
+                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
+                            <div><img class="math" src="../images/add-numbers.svg">
+                            </div>
+
+                            <li>Next, apply the exponent. Be careful about rounding.</li>
+                            <div><img class="math" src="../images/apply-exponent.svg"></div>
+
+
+                            <li>Finally, do the multiplication.</li>
+                            <div><img class="math" src="../images/fv-answer.svg"></div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-9.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-11.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">11</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
