--- a/tvm1/tvm1-12.html
+++ b/tvm1/tvm1-12.html
@@ -14,64 +14,48 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide12" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
+
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <h4>Exercise 1: Solution</h4>
-                            <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
-                            <p>Let's work through the problem.</p>
-                            <ul>
-                                <li>First, identify the variables:</li>
-                                <div><img class="math" src="../images/variables.svg">
-                                </div>
-                                <li>Once you've identified the variables, plug the numbers into the equation: </li>
-                                <div><img class="math" src="../images/plug-in-numbers.svg">
-                                </div>
-                                <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
-                                <div><img class="math" src="../images/add-numbers.svg">
-                                </div>
-
-                                <li>Next, apply the exponent. Be careful about rounding.</li>
-                                <div><img class="math" src="../images/apply-exponent.svg"></div>
-
-
-                                <li>Finally, do the multiplication.</li>
-                                <div><img class="math" src="../images/fv-answer.svg"></div>
-                                </li>
-                            </ul>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>In the problem we just solved, the number in parentheses is called the Future Value Factor. In the ‘good old days’ before calculators, people used tables of pre-calculated Future Value Factors to solve the TVM equation.</p>
+                        <p>First, find the intersection of the number of periods (years) on the left and the interest rate at the top to find the Future Value Factor. Then multiply PV times the Future Value Factor to calculate FV.</p>
+                        <div class="bottom-space">
+                            <img src="../images/fv_factor_table_example_10_years.png" class="border img-fluid">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-11.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-13.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">12</div>
+                        <div><img class="math" src="../images/future-value-factor.svg"></div>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-11.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-13.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">13</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
