--- a/tvm1/tvm1-2.html
+++ b/tvm1/tvm1-2.html
@@ -14,10 +14,8 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-
-            <div id="slide2" class="slide">
+            <div id="" class="slide">
                 <div class="row slide-title">
                     <div class="col-12">
                         <h2 class="primary-title">TVM: The Basics</h2>
@@ -71,16 +69,11 @@
                 </div>
                 <div class="row">
                     <div class="col-1">
-                        <div class="page-number">2</div>
+                        <div class="page-number"></div>
                     </div>
                 </div>
             </div>
 
-
-
-
-
-        </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
 
 
