--- a/tvm1/tvm1-4.html
+++ b/tvm1/tvm1-4.html
@@ -14,61 +14,61 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide4" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Introduction - Variables</h3>
-                    </div>
+
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Introduction - Variables</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>What factors would you consider in determining how much Future Value (FV) the customer should pay at a later date? Let's attach some variable names to these factors to understand them better.</p>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>What factors would you consider in determining how much Future Value (FV) the customer should pay at a later date? Let's attach some variable names to these factors to understand them better.</p>
 
-                            <div id="PresentValue">
-                                <h4>Present Value (PV)</h4>
-                                <p>How much is being borrowed? Present Value (PV) is the value in today's terms. This is sometimes called the principal or principal investment.</p>
-                            </div>
-                            <div id="FutureValue">
-                                <h4>Future Value (FV)</h4>
-                                <p>How much will you have in the future? Future Value (FV) is the value you will have in the future given a certain interest rate and/or time period.</p>
-                            </div>
-                            <div id="time">
-                                <h4>Time (n)</h4>
-                                <p>How long before the customer pays? Time (n) is the measure of time in years.</p>
-                            </div>
-                            <div id="interest">
-                                <h4>Interest (i)</h4>
-                                <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost.</p>
-                            </div>
+                        <div id="PresentValue">
+                            <h4>Present Value (PV)</h4>
+                            <p>How much is being borrowed? Present Value (PV) is the value in today's terms. This is sometimes called the principal or principal investment.</p>
+                        </div>
+                        <div id="FutureValue">
+                            <h4>Future Value (FV)</h4>
+                            <p>How much will you have in the future? Future Value (FV) is the value you will have in the future given a certain interest rate and/or time period.</p>
+                        </div>
+                        <div id="time">
+                            <h4>Time (n)</h4>
+                            <p>How long before the customer pays? Time (n) is the measure of time in years.</p>
+                        </div>
+                        <div id="interest">
+                            <h4>Interest (i)</h4>
+                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-3.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-5.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">4</div>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-3.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-5.html">Continue</a></button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number"></div>
+                </div>
+            </div>
+        </div>
 
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
