--- a/tvm1/tvm1-5.html
+++ b/tvm1/tvm1-5.html
@@ -14,47 +14,47 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide5" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
-                </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
-                            <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
-                            <p class="answer">The answer is $110.</p>
-                            <p>Did you get the right answer? Click Help to learn how to calculate the answer.</p>
 
-                        </div>
-                    </div>
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-4.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-6.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">5</div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
+                        <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
+                        <p class="answer">The answer is $110.</p>
+                        <p>Did you get the right answer? Click Help to learn how to calculate the answer.</p>
+
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-4.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-6.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">15</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
