--- a/tvm1/tvm1-1.html
+++ b/tvm1/tvm1-1.html
@@ -14,35 +14,35 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <!---------------- Title/Cover slide  *************** -->
-            <div id="slide1" class="slide background-image">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h1 class="primary-title">Time Value of Money</h1>
-                        <h2 class="secondary-title">Part 1: The Basics</h2>
-                    </div>
-                </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-sm-1 offset-sm-1">
-                        <!-- <div class="page-number">1</div> -->
-                    </div>
-                    <div class="offset-5 col-4 offset-md-6">
-                        <button type="button" class="hide btn"></button>
-                        <button type="button" class="btn start"><a href="tvm1-2.html">Start!</a></button>
-                    </div>
+
+        <!---------------- Title/Cover slide  *************** -->
+        <div id="" class="slide background-image">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h1 class="primary-title">Time Value of Money</h1>
+                    <h2 class="secondary-title">Part 1: The Basics</h2>
                 </div>
             </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-sm-1 offset-sm-1">
+                    <div class="page-number hide">1</div>
+                </div>
+                <div class="offset-5 col-4 offset-md-6">
+                    <button type="button" class="hide btn"></button>
+                    <button type="button" class="btn start"><a href="tvm1-2.html">Start!</a></button>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
