--- a/tvm1/tvm1-14.html
+++ b/tvm1/tvm1-14.html
@@ -14,51 +14,48 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
 
-            <div id="slide14" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
+
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
-                            <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
-                            <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
-                            <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
-                            <p class="question">How much would $100 grow in 10 years at 10%?</p>
-                            <p class="text-center">
-                                <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-13.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-15.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">14</div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route!</p>
+                        <p>If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables. <span class="alert">For all these questions, solve without using the TVM buttons on your financial calculator.</span></p>
+                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
+
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <!-- needs a help button  -->
+                    <button type="button" class="btn"><a href="tvm1-13.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-15.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">15</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
