--- a/tvm1/tvm1-16.html
+++ b/tvm1/tvm1-16.html
@@ -14,45 +14,50 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide16" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Sample Problems</h3>
-                    </div>
+
+
+        <div id="" class="slide stop">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                            <p class="answer">The answer is $100.</p>
-                            <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. </p>
+                        <p>When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
+                        <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
+                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                        <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
+                        <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-15.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-17.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">16</div>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-15.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-17.html">Continue</a></button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">17</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
 
 
