--- a/tvm1/tvm1-19.html
+++ b/tvm1/tvm1-19.html
@@ -14,45 +14,47 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide19" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">Sample Problems</h3>
-                    </div>
+
+        <div id="" class="slide stop">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                            <p class="answer">The answer is 11.612%.</p>
-                            <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-18.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-20.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">19</div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Answer this question:</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+
+                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
+
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-18.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-20.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">20</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
     </div> <!--  end of container -->
 
 
