--- a/tvm1/tvm1-8.html
+++ b/tvm1/tvm1-8.html
@@ -14,55 +14,55 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide8" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
+
+        <div id="" class="slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p class="question">How much money would you have in after the second year if you rolled over the $110 earned in the first year?</p>
-                            <p class="answer">The answer is $121.</p>
-                            <hr>
-                            <h4>Let's review:</h4>
-                            <p>
-                                <ul>
-                                    <li>We calculated the 1st year of interest earned by multiplying the interest rate times the 1st year starting principal. Then we added the 1st year interest to the principal.
-                                    </li>
-                                    <li>Next, we calculated the 2nd year of interest by finding 10% of the new principal amount. Then, we added the 2nd year interest to the new principal amount.
-                                    </li>
-                                </ul>
-                            </p>
-                            <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV).</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-7.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-9.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">8</div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years.</p>
+                        <p>We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n).</p>
+                        <p>If we combine our previous equations into one equation it looks like this:</p>
+                        <div><img class="math" src="../images/derive1.svg" alt=""></div>
+                        <p>We can simplify the equation to this: </p>
+                        <div><img class="math" src="../images/derive2.svg" alt=""></div>
+
+                        <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
+                        <div><img class="math" src="../images/derive2-variables.svg" alt=""></div>
+
+                        <p>Click Help to review math principals that you need to know to follow along with the derivation of the equation. If you don't require math assistance, click Continue.</p>
                     </div>
                 </div>
             </div>
+            <!-- to math refresher -->
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-7.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-9.html">Continue</a></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">9</div>
+                </div>
+            </div>
+        </div>
 
 
-        </div> <!-- End of allSlides div -->
+
+
     </div> <!--  end of container -->
 
 
