--- a/tvm1/tvm1-9.html
+++ b/tvm1/tvm1-9.html
@@ -14,55 +14,65 @@
 
 <body>
     <div class="container-fluid">
-        <div class="allSlides">
 
-            <div id="slide9" class="slide">
-                <div class="row slide-title">
-                    <div class="col-12">
-                        <h2 class="primary-title">TVM: The Basics</h2>
-                        <h3 class="secondary-title">TVM Equation</h3>
-                    </div>
+
+
+        <div id="" class="slide exercise-slide">
+            <div class="row slide-title">
+                <div class="col-12">
+                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
-                <nav class="row">
-                    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                    <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
-                    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-                </nav>
-                <div class="row">
-                    <div class="col-12">
-                        <div class="content">
-                            <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years.</p>
-                            <p>We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n).</p>
-                            <p>If we combine our previous equations into one equation it looks like this:</p>
-                            <div><img class="math" src="../images/derive1.svg" alt=""></div>
-                            <p>We can simplify the equation to this: </p>
-                            <div><img class="math" src="../images/derive2.svg" alt=""></div>
+            </div>
+            <nav class="row">
+                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./tvm1-exercises.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+            </nav>
+            <div class="row">
+                <div class="col-12">
+                    <div class="content">
+                        <h4>Example Exercise</h4>
+                        <p class="question">What would the $100 investment be worth in 10 years at 10% interest?</p>
+                        <p>Instructions: Identify the variables in the question and input them into the blanks provided. Use a decimal for the interest variable.</p>
 
-                            <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
-                            <div><img class="math" src="../images/derive2-variables.svg" alt=""></div>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
 
-                            <p>Click Help to review math principals that you need to know to follow along with the derivation of the equation. If you don't require math assistance, click Continue.</p>
+                                    <label>PV </label>
+                                    <input id="PV" type="number" placeholder="0"><br>
+
+                                    <label>&nbsp;&nbsp;&nbsp;i </label>
+                                    <input id="i" type="number" placeholder=".00"><br>
+
+                                    <label>&nbsp;&nbsp;n </label>
+                                    <input id="n" type="number" placeholder="0"><br>
+
+                                </form>
+                                <button onclick="calc_FV()" type="button" class="btn calculate-btn">Calculate</button>
+                            </div>
+                            <div class="answer" id="answer"></div>
                         </div>
                     </div>
                 </div>
-                <!-- to math refresher -->
-                <div class="row">
-                    <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                        <button type="button" class="btn"><a href="tvm1-8.html">Back</a></button>
-                        <button type="button" class="btn"><a href="tvm1-10.html">Continue</a></button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-1">
-                        <div class="page-number">9</div>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <button type="button" class="btn"><a href="tvm1-8.html">Back</a></button>
+                    <button type="button" class="btn"><a href="tvm1-10.html">Continue</a></button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-1">
+                    <div class="page-number">10</div>
+                </div>
+            </div>
+        </div>
 
 
 
-        </div> <!-- End of allSlides div -->
     </div> <!--  end of container -->
 
 
